homework 2 finished